Se agrego la funcionalidad de enviar mensajes por correo, como tambien de enviar archivos por correo. Se agrego la funcionalidad de enviar el reporte de la nota de venta por correo mediante el id de la nota de venta.